--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
                     <img src="./images/poundy4.jpg" alt="" class="home-img">
                 </div>
                 <div class="text">
-                    <h3>Restaurant chain</h3>
+                    <h3>LOCAL COUSINE</h3>
                     <h1><span>TRAZ</span> FOODS</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, mollitia!</p>
+                    <p>PREMIUM NIGERIAN DELICACY JUST FOR YOU </p>
                     <button class="home__btn">  CONTACT</button>
                 </div>
             </div>
 
             <div id="about">
                  <h1>ABOUT</h1>
-                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, enim.</p>
+                 <p>The Idea that every skill we have should be a blessing to others was a motivation for this. <br>
+                We are dedicated to bringing delicious local food you dream of to your doorstep </p>
                
                <div class="body">
                 <div class="about__image">
