--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h3>LOCAL COUSINE</h3>
                     <h1><span>TRAZ</span> FOODS</h1>
                     <p>PREMIUM NIGERIAN DELICACY JUST FOR YOU </p>
-                    <button class="home__btn">  CONTACT</button>
+                    <a href="#contact" ><button class="home__btn">CONTACT  </button></a>
                 </div>
             </div>
 
