--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="./images/poundy4.jpg" alt="" class="home-img">
                 </div>
                 <div class="text">
-                    <h3>LOCAL COUSINE</h3>
+                    <h3>LOCAL CUISINE</h3>
                     <h1><span>TRAZ</span> FOODS</h1>
                     <p>PREMIUM NIGERIAN DELICACY JUST FOR YOU </p>
                     <a href="#contact" ><button class="home__btn">CONTACT  </button></a>
