--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <div class="c-image">
                             <img src="./images/poundy4.jpg" alt="" class="menu-img">
                             </div>
-                            <h4 class='food-name'>POUNDED YAM AND ILA-ALASEPO</h4>
+                            <h4 class='food-name'>POUNDED YAM AND EGUSI</h4>
                             <h5><strong>$10 </strong><span class="add-icon">ADD</span></h5>
                         </div>
 
