second UI update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         </div>
         <div class="text">
           <h1>
-            ONGBONA <span><i class="bx bxs-hot" style="color: red"></i></span>
+            ONGBONA
+            <span
+              ><i class="bx bxs-hot" style="color: rgb(244, 97, 0)"></i
+            ></span>
           </h1>
           <p>PREMIUM NIGERIAN DELICACY</p>
           <a href="#contact"><button class="home__btn">CONTACT</button></a>
