third UI update

--- a/index.html
+++ b/index.html
@@ -33,6 +33,35 @@
         </li>
       </nav>
 
+      <div id="reservation" class="container cartDetail">
+        <h1>CART</h1>
+
+        <div class="shopping-container">
+          <div class="shopping-header">
+            <h4>FOOD</h4>
+            <h4>QUANTITY</h4>
+            <h4>SUBTOTAL</h4>
+          </div>
+
+          <div class="summation">
+            <div class="sub">
+              <h4>TOTAL</h4>
+              <h4 class="final-price">$0</h4>
+            </div>
+
+            <div class="sub">
+              <h4>DELIVERY</h4>
+              <h4 class="delivery-fee">$0</h4>
+            </div>
+
+            <div class="sub">
+              <h4>SUM-TOTAL</h4>
+              <h4 class="sum-total">$0</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="headerIcons">
         <div class="toggle">
           <i class="bx bx-menu"></i>
@@ -46,7 +75,11 @@
     <main>
       <div id="home">
         <div class="home__image">
-          <img src="./images/ponded yam1.jpg" alt="" class="home-img" />
+          <img
+            src="https://images.unsplash.com/photo-1604329760661-e71dc83f8f26?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bmlnZXJpYSUyMGZvb2R8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+            class="home-img"
+          />
         </div>
         <div class="text">
           <h1>
@@ -234,89 +267,62 @@
         </div>
       </div>
 
-      <div id="reservation" class="container cartDetail">
-        <h1>CART</h1>
-
-        <div class="shopping-container">
-          <div class="shopping-header">
-            <h4>FOOD</h4>
-            <h4>QUANTITY</h4>
-            <h4>SUBTOTAL</h4>
-          </div>
-
-          <div class="summation">
-            <div class="sub">
-              <h4>TOTAL</h4>
-              <h4 class="final-price">$0</h4>
-            </div>
-
-            <div class="sub">
-              <h4>DELIVERY</h4>
-              <h4 class="delivery-fee">$0</h4>
-            </div>
-
-            <div class="sub">
-              <h4>SUM-TOTAL</h4>
-              <h4 class="sum-total">$0</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <div id="contact" class="container">
         <h1>CONTACT</h1>
-        <div class="info-wrap">
-          <div class="contact-info">
-            <ul>
-              <li>
-                <div><i class="bx bx-location-plus"></i></div>
-                <h4>
-                  Address: <br /><span
-                    >45, okiki street, Ago Place, Okota-Lagos</span
-                  >
-                </h4>
-              </li>
-              <li>
-                <div><i class="bx bx-mail-send"></i></div>
-                <h4>Email: <br /><span>creativitytraz22@gmail.com</span></h4>
-              </li>
-              <li>
-                <div><i class="bx bxs-phone-call"></i></div>
-                <h4>Mobile: <br /><span> 08068095923</span></h4>
-              </li>
-              <li>
-                <div><i class="bx bxl-github"></i></div>
-                <h4>GitHub: <br /><span>https://github.com/aosenit</span></h4>
-              </li>
-            </ul>
+        <div class="contactContainer">
+          <div class="info-wrap">
+            <div class="contact-info">
+              <ul>
+                <li>
+                  <div><i class="bx bx-location-plus"></i></div>
+                  <h4>
+                    Address: <br /><span
+                      >45, okiki street, Ago Place, Okota-Lagos</span
+                    >
+                  </h4>
+                </li>
+                <li>
+                  <div><i class="bx bx-mail-send"></i></div>
+                  <h4>Email: <br /><span>creativitytraz22@gmail.com</span></h4>
+                </li>
+                <li>
+                  <div><i class="bx bxs-phone-call"></i></div>
+                  <h4>Mobile: <br /><span> 08068095923</span></h4>
+                </li>
+                <li>
+                  <div><i class="bx bxl-github"></i></div>
+                  <h4>GitHub: <br /><span>https://github.com/aosenit</span></h4>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
 
-        <div class="contactForm">
-          <form action="">
-            <div>
-              <h4>Fullname:</h4>
-              <input type="text" placeholder="Enter your full name" />
-            </div>
-            <div>
-              <h4>Email:</h4>
-              <input type="email" placeholder="Enter your email" />
-            </div>
-            <div>
-              <h4>Phone:</h4>
-              <input type="phone" placeholder="Enter your phone number" />
-            </div>
-            <div>
-              <textarea
-                name=""
-                id=""
-                cols="30"
-                rows="10"
-                placeholder="Type here..."
-              ></textarea>
-            </div>
-            <button>Submit</button>
-          </form>
+          <div class="contactForm">
+            <form action="">
+              <div>
+                <h4>Fullname:</h4>
+                <input type="text" placeholder="Enter your full name" />
+              </div>
+              <div>
+                <h4>Email:</h4>
+                <input type="email" placeholder="Enter your email" />
+              </div>
+              <div>
+                <h4>Phone:</h4>
+                <input type="phone" placeholder="Enter your phone number" />
+              </div>
+              <div>
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  placeholder="Type here..."
+                ></textarea>
+              </div>
+              <button>Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </main>
