--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
 
     <main>
-      <div id="home">
+      <div id="home" class="">
         <div class="home__image">
           <img
             src="https://images.unsplash.com/photo-1604329760661-e71dc83f8f26?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bmlnZXJpYSUyMGZvb2R8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <div id="about" class="container">
+      <div id="about" class="container anchor">
         <h1>ABOUT</h1>
         <p>
           The Idea that every skill we have should be a blessing to others was a
@@ -132,7 +132,7 @@
         </div>
       </div>
 
-      <div id="menu" class="container">
+      <div id="menu" class="container anchor">
         <h1>MENU</h1>
         <div class="image-grid">
           <div class="menu-image">
@@ -267,7 +267,7 @@
         </div>
       </div>
 
-      <div id="contact" class="container">
+      <div id="contact" class="container anchor">
         <h1>CONTACT</h1>
         <div class="contactContainer">
           <div class="info-wrap">
@@ -334,7 +334,7 @@
       </h5>
       <img src="./images/payment.png" alt="" />
       <div class="scroll-up"><i class="bx bxs-chevrons-up"></i></div>
-      <div class="change-theme"><i class="bx bx-moon"></i></div>
+      <div class="change-theme"></div>
     </footer>
   </body>
   <script src="script.js"></script>
